--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="skill-cards">
             <div class="skill-card">
                 <h3>Projects</h3>
-                <p>Showcase of my key development projects, including web apps, automation tools, and AI-based systems.
+                <p>Please check my academic or personal projects, by clicking here.
                 </p>
             </div>
             <div class="skill-card">
