modified:   index.html

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
             </div>
             <div class="skill-card">
                 <h3> ML Projects</h3>
-                <p>Hands-on experience building and deploying machine learning models for predictive analytics and data
-                    insights.</p>
+                <p>Please click here to check all the ML projects and models I build.</p>
             </div>
         </div>
     </section>
